# V-Shield

./: Cargo.toml  LICENSE  README.md
crates/vshield-core/: Cargo.toml
crates/vshield-core/src/: anchor.rs  crypto.rs  ecc.rs  interleave.rs  lib.rs  protocol.rs  token.rs
crates/vshield-dec/: Cargo.toml
crates/vshield-dec/src/: lib.rs  main.rs
crates/vshield-enc/: Cargo.toml
crates/vshield-enc/src/: lib.rs  main.rs
docs/: PROJECT_STATUS.md  QUICK_START.md  TAURI_SETUP.md  YOUTUBE_COMPATIBILITY.md
reports/: COMPLETION_SUMMARY.md  PHASE1_RESULTS.md  TESTING.md  TOKENS.md
